# workflow-plugin

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: check-plugin-parity.sh
.cursor-plugin/: marketplace.json
.github/workflows/: ci.yml  coordinator-ci.yml
artifact/: DESIGN.md  README.md
artifact-documents/: README.md
artifact-documents/.claude-plugin/: plugin.json
artifact-documents/artifact-backends/document-confluence/: README.md  manifest.json
artifact-documents/artifact-backends/document-filesystem/: artifact.sh  manifest.json
artifact-documents/artifact-providers/confluence-page/: artifact.sh  manifest.json
artifact-documents/artifact-providers/document/: README.md  artifact.sh  manifest.json  schema.json
artifact-documents/artifact-templates/: design-document.md  implementation-plan.md  release-note.md  requirement.md  review-note.md  test-plan.md  triage-note.md  user-story.md
artifact-documents/scripts/: render-doc-template.sh
artifact-github/: README.md
artifact-github/.claude-plugin/: plugin.json
artifact-github/artifact-backends/gh-branch/: README.md  artifact.sh  manifest.json
artifact-github/artifact-backends/gh-gist/: artifact.sh  manifest.json
artifact-github/artifact-backends/gh-issue/: artifact.sh  manifest.json
artifact-github/artifact-backends/gh-milestone/: artifact.sh  manifest.json
artifact-github/artifact-backends/gh-pr/: artifact.sh  manifest.json
artifact-github/artifact-backends/gh-release/: README.md  artifact.sh  manifest.json
artifact-github/artifact-backends/gh-tag/: artifact.sh  manifest.json
artifact-github/artifact-providers/branch/: README.md  manifest.json  schema.json
artifact-github/artifact-providers/gh-branch/: artifact.sh  manifest.json
artifact-github/artifact-providers/gh-gist/: README.md  artifact.sh  manifest.json
artifact-github/artifact-providers/gh-issue/: README.md  artifact.sh  manifest.json
artifact/.claude-plugin/: plugin.json
artifact/contracts/: artifact-backend.schema.json  artifact-provider.schema.json
artifact/hooks/: hooks.json  sessionstart-discover.sh
artifact/scripts/: discover.sh  graph.sh  run-provider.sh  xdg.sh
artifact/tests/: backend-conformance.sh  provider-conformance.sh
coordinator/: README.md
coordinator/.claude-plugin/: plugin.json
coordinator/agents/: coordinator-worker.md  coordinator.md
coordinator/hooks/: release-lock-on-stop.ps1  release-lock-on-stop.sh  sessionstart-env-check.ps1  sessionstart-env-check.sh
coordinator/scripts/: ensure-pr.ps1  ensure-pr.sh  lock-acquire.ps1  lock-acquire.sh  lock-heartbeat.ps1  lock-heartbeat.sh  lock-release.ps1  lock-release.sh  pr-scan.ps1  pr-scan.sh
coordinator/tests/: conftest.py  test_smoke_ensure_pr.py  test_smoke_lock_protocol.py  test_smoke_pr_scan.py
env-setup/: README.md
env-setup/.claude-plugin/: plugin.json
env-setup/tests/: conftest.py  test-parity.ps1  test_smoke_ensure_env.py
harmonize/: README.md  recommended-gitignore
harmonize/.claude-plugin/: plugin.json
harmonize/.cursor-plugin/: plugin.json
harmonize/agents/: design-orchestrator.md  harmonize.md  plan-implementer.md  plan-orchestrator.md  pr-reviewer.md  specify-orchestrator.md
harmonize/docs/: cursor-host.md
harmonize/evals/: README.md  cases.yaml  run.sh
harmonize/hooks/: check-config.sh  hooks.cursor.json  hooks.json  subagent-start-worktree-state.sh  subagent-stop-unblock-workflow.sh  subagent-stop-worktree-state.py  subagent-stop-worktree-state.sh
rumdl/.claude-plugin/: plugin.json
rumdl/.cursor-plugin/: plugin.json
rumdl/hooks/: fmt-markdown.sh  hooks.cursor.json  hooks.json
workflow/: DESIGN.md  README.md  pyproject.toml
workflow-plugin/: pyproject.toml
workflow-plugin/.claude-plugin/: plugin.json
workflow-plugin/hooks/: userpromptsubmit-status.py
workflow-plugin/skills/workflow/: SKILL.md
workflow-plugin/skills/workflow/references/: tracking.md
workflow-plugin/workflows/default/: manifest.json  workflow.md
workflow/.claude-plugin/: plugin.json
workflow/artifact-backends/execution-gh-pr/: README.md  artifact.sh  manifest.json
workflow/artifact-providers/execution/: README.md  schema.json
workflow/artifact-schemes/execution/: scheme.py  scheme.toml
workflow/artifact-storage/execution-gh-pr/: storage.py  storage.toml
workflow/artifact-templates/: plan-do.manifest.json  plan-do.md  workflow-execution.manifest.json  workflow-execution.md  write-review.manifest.json  write-review.md
workflow/hooks/: hooks.json  posttooluse-progress.py  posttooluse-pylint.py  pretooluse-no-self-edit.py  pretooluse-rules.py  sessionstart-env-check.py  sessionstart-orchestrator-lock.py  subagentstop-release.py  teammateidle-rescan.py  userpromptsubmit-status.py
workflow/scripts/: dispatch-execution.py  dispatch-execution.sh  orchestrator-lock.py  workflow-conformance.py
workflow/scripts/workflowlib/: __init__.py  conformance.py  dispatch.py  env.py  ledger.py  lock.py  paths.py  release.py  rules.py  status.py  teammate.py
workflow/skills/workflow/: SKILL.md
workflow/skills/workflow/references/: workflow-contract.md
workflow/skills/workflows/author/: SKILL.md  manifest.json
workflow/skills/workflows/conductor/: SKILL.md  manifest.json
workflow/skills/workflows/default/: SKILL.md
workflow/skills/workflows/plan-do/: SKILL.md
workflow/skills/workflows/review/: SKILL.md  manifest.json
workflow/skills/workflows/update/: SKILL.md  manifest.json
workflow/tests/: conftest.py  test_conformance.py  test_execution_scheme.py  test_hooks_manifest.py  test_lock.py  test_rules.py  workflow-conformance.sh
workflow/workflows/default/: manifest.json
workflow/workflows/write-review/: workflow.md
(+82 files in other folders)
