[project]
name = "workflow-plugin"
version = "2.3.0"
description = "Workflow primitive for the cjhowe-us/artifact Claude Code plugin ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Christian Howe", email = "cjhowe@users.noreply.github.com" }]
dependencies = [
  "artifact-plugin>=2.0.5",
  "pydantic>=2,<3",
  "pyyaml>=6",
  "jinja2>=3.1",
  "tomlkit>=0.13",
]

[project.urls]
Homepage = "https://github.com/cjhowe-us/workflow-plugin"
Source = "https://github.com/cjhowe-us/workflow-plugin"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-xdist>=3",
  "ruff>=0.7",
  "mypy>=1.11",
  "types-PyYAML>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/workflowlib"]

[tool.hatch.build.targets.sdist]
include = [
  "scripts/workflowlib",
  "README.md",
  "DESIGN.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "../../artifact-plugin/artifact-plugin/scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "UP", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"artifact-storage/execution-gh-pr/storage.py" = ["E402"]
"hooks/userpromptsubmit-status.py" = ["I001"]
"scripts/dispatch-execution.py" = ["E402"]
"tests/**" = ["ANN"]

[tool.ty.src]
include = ["scripts", "hooks", "artifact-schemes", "artifact-storage"]
exclude = ["**/tests/**", "**/.venv/**", "**/dist/**"]

[tool.ty.environment]
python-version = "3.11"
extra-paths = [
  "scripts",
  "../../artifact-plugin/artifact-plugin/scripts",
  "../../artifact-plugin/artifact-github-plugin/scripts",
]
