[project]
name = "workflow"
version = "2.0.2"
description = "Workflow primitive for the cjhowe-us/artifact Claude Code plugin ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Christian Howe", email = "cjhowe@users.noreply.github.com" }]
# Plugin-level dependency on `artifact` is declared in .claude-plugin/plugin.json
# (`requires.artifact`) — installed from the Claude Code marketplace. In-repo
# tests see the sibling plugin via the `pythonpath` entry below.
dependencies = [
  "pydantic>=2,<3",
  "pyyaml>=6",
  "jinja2>=3.1",
  "tomlkit>=0.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Plugin tree is not a Python package (hooks/, agents/, skills/, workflows/
# are Claude-Code plugin directories). The pyproject exists only to declare
# runtime + dev dependencies and to host pytest/ruff/mypy config — there is
# nothing to ship to PyPI.
[tool.setuptools]
py-modules = []
packages = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-xdist>=3",
  "ruff>=0.7",
  "mypy>=1.11",
  "types-PyYAML>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "../../artifact/artifact/scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E (pycodestyle), F (pyflakes), I (import sort), UP (pyupgrade),
# ANN (flake8-annotations) for static-type universality.
extend-select = ["I", "UP", "ANN"]
# ANN101/ANN102 (self/cls types) and ANN401 (Any) are noisy; mypy enforces
# the substantive coverage. Tests opt out of ANN entirely (pytest fixtures
# rarely benefit from explicit annotation noise).
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
# These modules bootstrap `artifactlib` onto sys.path before importing it,
# which legitimately requires imports below executable code.
"artifact-storage/execution-gh-pr/storage.py" = ["E402"]
"scripts/dispatch-execution.py" = ["E402"]
"tests/**" = ["ANN"]

[tool.ty.src]
include = ["scripts", "hooks", "artifact-schemes", "artifact-storage"]
exclude = ["**/tests/**", "**/.venv/**", "**/dist/**"]

[tool.ty.environment]
python-version = "3.11"
# artifactlib lives in the sibling artifact-plugin checkout (CI) or in the
# plugin cache (runtime). List both so either works.
extra-paths = [
  "scripts",
  "../../artifact-plugin/artifact-plugin/scripts",
]
